<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<packaging>pom</packaging>

	<groupId>ru.loolzaaa</groupId>
	<artifactId>sso-client-jdk17</artifactId>
	<version>0.12.0</version>

	<name>Single Sign-On Authentication Server Client</name>

	<modules>
		<module>sso-client-core</module>
		<module>sso-client-spring-boot-autoconfigure</module>
		<module>sso-client-spring-boot-starter</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>17</java.version>
		<spring.boot.version>3.4.4</spring.boot.version>
		<httpclient.version>5.2.1</httpclient.version>
		<jjwt.version>0.12.6</jjwt.version>
	</properties>

	<build>
		<finalName>${project.artifactId}-${project.version}-jdk17</finalName>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.14.0</version>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.5.2</version>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>0.8.12</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>3.1.4</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub loolzaaa Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/loolzaaa/sso-authentication-client</url>
		</repository>
	</distributionManagement>

</project>
